--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+      "web-vitals": "^2.1.4",
+    "rxbeach": "0.10.2",
+      "rxjs": "6.6.7",
+      "websocket-ts": "1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
